Сделаны сервисы для добавления нового цифрового пароля ю
